// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Pagination on the last page unchanged 1`] = `
<div>
  <div
    class="space-y-2 pt-6 pb-8 md:space-y-5"
  >
    <nav
      class="flex justify-between"
    >
      <button
        class="cursor-auto disabled:opacity-50"
        disabled=""
        rel="previous"
      >
        Previous
      </button>
      <span>
        1
         of 
      </span>
      <button
        class="cursor-auto disabled:opacity-50"
        disabled=""
        rel="next"
      >
        Next
      </button>
    </nav>
  </div>
</div>
`;

exports[`renders Pagination unchanged 1`] = `
<div>
  <div
    class="space-y-2 pt-6 pb-8 md:space-y-5"
  >
    <nav
      class="flex justify-between"
    >
      <a
        href="/blog"
      >
        <button
          rel="previous"
        >
          Previous
        </button>
      </a>
      <span>
        2
         of 
      </span>
      <button
        class="cursor-auto disabled:opacity-50"
        disabled=""
        rel="next"
      >
        Next
      </button>
    </nav>
  </div>
</div>
`;

exports[`renders Pagination with one page unchanged 1`] = `
<div>
  <div
    class="space-y-2 pt-6 pb-8 md:space-y-5"
  >
    <nav
      class="flex justify-between"
    >
      <button
        class="cursor-auto disabled:opacity-50"
        disabled=""
        rel="previous"
      >
        Previous
      </button>
      <span>
        1
         of 
      </span>
      <button
        class="cursor-auto disabled:opacity-50"
        disabled=""
        rel="next"
      >
        Next
      </button>
    </nav>
  </div>
</div>
`;
